[project]
name = "pvb-cs2-steamapi-connector"
version = "0.1.0"
description = "Pivo"
requires-python = ">=3.12"
dependencies = [
    "csgo @ git+https://github.com/SyberiaK/csgo.git",
    "gevent>=25.9.1",
    "requests>=2.32.5",
    "steam>=1.4.4",
    "protobuf==3.20.3",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.5",
    "fastapi>=0.128.7",
]
